--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1> This is heading 2 </h1>
     <h2> This is a new heading  </h2>
+    <img src = "bird.jpg" alt = "">
     
 </body>
 </html>
