--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1> This is heading 2 </h1>
     <h2> This is a new heading  </h2>
+    <p> This is a bird. It has two wings. </p>
     <img src = "bird.jpg" alt = "">
     
 </body>
