--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1> This is heading 2 </h1>
     <h2> This is a new heading  </h2>
     <p> This is a bird. It has two wings. </p>
+    <h3> I am using Git</h3>
     <img src = "bird.jpg" alt = "">
     
 </body>
